tests/ui/return/return-match-array-const.stderr
error[E0572]: return statement outside of function body
  --> $DIR/return-match-array-const.rs:5:10
   |
LL | / fn main() {
...  |
LL | |     [(); return match 0 { n => n }];
   | |          ^^^^^^^^^^^^^^^^^^^^^^^^^ the return is part of this body...
...  |
LL | | }
   | |_- ...not the enclosing function body

error[E0572]: return statement outside of function body
  --> $DIR/return-match-array-const.rs:9:10
   |
LL | / fn main() {
...  |
LL | |     [(); return match 0 { 0 => 0 }];
   | |          ^^^^^^^^^^^^^^^^^^^^^^^^^ the return is part of this body...
...  |
LL | | }
   | |_- ...not the enclosing function body

error[E0572]: return statement outside of function body
  --> $DIR/return-match-array-const.rs:13:10
   |
LL | / fn main() {
...  |
LL | |     [(); return match () { 'a' => 0, _ => 0 }];
   | |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the return is part of this body...
...  |
LL | | }
   | |_- ...not the enclosing function body

error[E0308]: mismatched types
  --> $DIR/return-match-array-const.rs:13:28
   |
LL |     [(); return match () { 'a' => 0, _ => 0 }];
   |                       --   ^^^ expected `()`, found `char`
   |                       |
   |                       this expression has type `()`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0308, E0572.
For more information about an error, try `rustc --explain E0308`.
